src/examples/errors/division_by_zero_symbolic.veri
// Should fail: divisor could be zero
fn divide(a: int, b: int) -> int {
    a / b
}

fn main() -> int {
    divide(10, 2)
}
